--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.2",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.9.2"
   }
 }
